--- a/Invoice Slip.html
+++ b/Invoice Slip.html
@@ -23,7 +23,7 @@
 
             #tablehead{
                 background-color: rgb(214, 195, 87);
-                color: black;
+                color: gray;
             }
         </style>
     </head>
